fmt and updates

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
+# Environment variables
 .env
+.env.*
+
+# Temporary files
 tmp/
+temp/
+*.tmp
+
+# Build output
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool
+*.out
+
+# Go workspace file
+go.work
